--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,18 +22,19 @@
     <![endif]-->
     <jhi-main>
       <div class="app-loading">
-        <div class="lds-pacman">
-          <div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <div>
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-        </div>
+        <div class="running-man"></div>
+        <!--        <div class="lds-pacman">-->
+        <!--          <div>-->
+        <!--            <div></div>-->
+        <!--            <div></div>-->
+        <!--            <div></div>-->
+        <!--          </div>-->
+        <!--          <div>-->
+        <!--            <div></div>-->
+        <!--            <div></div>-->
+        <!--            <div></div>-->
+        <!--          </div>-->
+        <!--        </div>-->
       </div>
       <div class="app-loading">
         <div id="jhipster-error" style="display: none">
